[package]
name = "itsjustchess"
description = "A simple chess game: it's just chess."
license = "GPL-3.0"
repository = "https://github.com/mcgilmore/chess"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ggez = { version = "0.9.3", default-features = false }
rand = "0.8.5"
