[package]
name = "itsjustchess"
description = "A simple chess game: it's just chess."
license = "GPL-3.0"
repository = "https://github.com/mcgilmore/chess"
version = "0.1.3"
edition = "2021"

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.38", features = ["derive"] }
ggez = { version = "0.9.3", default-features = false }
rand = "0.9.1"
